# actix_web_study

./: .gitignore  Cargo.toml  README.md
migrations/2021-08-22-120159_something/: down.sql  up.sql
src/: application.rs  controller.rs  database.rs  main.rs  routes.rs  schema.rs  something_dto.rs  something_entity.rs
src/applications/: something.rs
src/controllers/: deserializer_error_handler.rs  error_handler.rs  mod.rs  something.rs
src/logger/: log.rs
src/models/: mod.rs  new_something.rs  something.rs
src/repositories/: something.rs
src/routes/: something.rs
src/view_models/: mod.rs  something.rs
