[package]
name = "actix_webapi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "2.2.1"
actix-rt = "2.2.0"
actix-web = "3.3.2"
env_logger = "0.9.0"
futures = "0.3.16"
serde = {version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
